cluster/apps/dev/code/code.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: code-server
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-url: "http://authelia.networking.svc.cluster.local/api/verify"
    nginx.ingress.kubernetes.io/auth-signin: "https://login.${SECRET_DOMAIN}"
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
    external-dns/is-public: "true"
    hajimari.io/enable: "true"
    hajimari.io/icon: "microsoft-visual-studio-code"
spec:
  rules:
    - host: "code.${SECRET_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: code-server
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - "code.${SECRET_DOMAIN}"
---
apiVersion: v1
kind: Service
metadata:
  name: code-server
  namespace: dev
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: code-server
  type: LoadBalancer
  loadBalancerIP: "${SVC_CODE_ADDR}"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: code-server
  namespace: dev
spec:
  selector:
    matchLabels:
      app: code-server
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: code-server
    spec:
      containers:
        - image: codercom/code-server:4.1.0
          name: code-server
          args:
            - --auth
            - none
          ports:
            - containerPort: 8080
              name: code-server
          volumeMounts:
            - name: pv-code-server
              mountPath: /home/coder
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      volumes:
        - name: pv-code-server
          persistentVolumeClaim:
            claimName: code-server-data-v2
